<resources>
    <string name="app_name" translatable="false">Snoozey</string>
    <string name="app_version" translatable="false">Version: 1.3</string>
    <string name="app_author">Author: Fanuware</string>
    <string name="app_mail" translatable="false">fanuware@gmail.com</string>

    <!-- window title -->
    <string name="main_activity_title">Schedule</string>
    <string name="add_new_time_activity_title">New alarm</string>
    <string name="edit_time_activity_title">Edit alarm</string>
    <string name="settings_activity_title">Settings</string>
    <string name="about_activity_title">About</string>

    <!-- time -->
    <string name="date_pattern">MMMM dd, YYYY</string>
    <string name="time_show_once">once</string>

    <string name="add_time_monday">Mo</string>
    <string name="add_time_tuesday">Tu</string>
    <string name="add_time_wednesday">We</string>
    <string name="add_time_thursday">Th</string>
    <string name="add_time_friday">Fr</string>
    <string name="add_time_saturday">Sa</string>
    <string name="add_time_sunday">Su</string>

    <string name="alarm_mode_standard">Standard</string>
    <string name="alarm_mode_auto_snooze">Auto Snooze</string>

    <string name="alarm_button_on">On</string>
    <string name="alarm_button_off">Off</string>

    <string name="submit_time">Submit</string>

    <string name="alarm_message_single">Alarm active in %1$s!</string>
    <string name="alarm_message_double">Alarm active in %1$s and %2$s!</string>

    <plurals name="numberOfMinutes">
        <item quantity="one">%d minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <plurals name="numberOfHours">
        <item quantity="one">%d hour</item>
        <item quantity="other">%d hours</item>
    </plurals>
    <plurals name="numberOfDays">
        <item quantity="one">%d day</item>
        <item quantity="other">%d days</item>
    </plurals>

    <!-- Alarm acknowledge -->
    <string name="snooze">Snooze</string>
    <string name="hint_two_finger">Two Finger Zoom</string>

    <!-- Alarm notification -->
    <plurals name="notification_alarm_snooze_title">
        <item quantity="one">Alarm Snoozing</item>
        <item quantity="other">%d Alarms Snoozing</item>
    </plurals>
    <string name="notification_alarm_snooze_text">Next alarm at %1$s.</string>

    <!-- preference -->
    <string name="pref_vibration_key" translatable="false">vibration</string>
    <string name="pref_vibration_label">Vibrate</string>

    <string name="pref_alarm_mode_key" translatable="false">alarm_mode</string>
    <string name="pref_alarm_mode_label">Alarm canceling mode</string>
    <string name="pref_alarm_mode_default" translatable="false">@string/pref_alarm_mode_value1</string>
    <string name="pref_alarm_mode_option1">Two Finger Zoom (Standard)</string>
    <string name="pref_alarm_mode_value1" translatable="false">0</string>
    <string name="pref_alarm_mode_option2">Solve calculation</string>
    <string name="pref_alarm_mode_value2" translatable="false">1</string>

    <string name="pref_snooze_delay_key" translatable="false">snooze_delay</string>
    <string name="pref_snooze_delay_label">Snooze delay</string>
    <string name="pref_snooze_delay_default" translatable="false">@string/pref_snooze_delay_value2</string>
    <string name="pref_snooze_delay_option1">2 minutes</string>
    <string name="pref_snooze_delay_value1" translatable="false">2</string>
    <string name="pref_snooze_delay_option2">5 minutes</string>
    <string name="pref_snooze_delay_value2" translatable="false">5</string>
    <string name="pref_snooze_delay_option3">7 minutes</string>
    <string name="pref_snooze_delay_value3" translatable="false">7</string>
    <string name="pref_snooze_delay_option4">10 minutes</string>
    <string name="pref_snooze_delay_value4" translatable="false">10</string>

    <string name="pref_max_alarm_duration_key" translatable="false">max_alarm_duration</string>
    <string name="pref_max_alarm_duration_label">Maximum alarm duration</string>
    <string name="pref_max_alarm_duration_default" translatable="false">@string/pref_max_alarm_duration_value6</string>
    <string name="pref_max_alarm_duration_option1">1 minute</string>
    <string name="pref_max_alarm_duration_value1" translatable="false">60</string>
    <string name="pref_max_alarm_duration_option2">2 minutes</string>
    <string name="pref_max_alarm_duration_value2" translatable="false">120</string>
    <string name="pref_max_alarm_duration_option3">5 minutes</string>
    <string name="pref_max_alarm_duration_value3" translatable="false">300</string>
    <string name="pref_max_alarm_duration_option4">10 minutes</string>
    <string name="pref_max_alarm_duration_value4" translatable="false">600</string>
    <string name="pref_max_alarm_duration_option5">15 minutes</string>
    <string name="pref_max_alarm_duration_value5" translatable="false">900</string>
    <string name="pref_max_alarm_duration_option6">20 minutes</string>
    <string name="pref_max_alarm_duration_value6" translatable="false">1200</string>
    <string name="pref_max_alarm_duration_option7">30 minutes</string>
    <string name="pref_max_alarm_duration_value7" translatable="false">1800</string>
    <string name="pref_max_alarm_duration_option8">45 minutes</string>
    <string name="pref_max_alarm_duration_value8" translatable="false">2700</string>
    <string name="pref_max_alarm_duration_option9">1 hour</string>
    <string name="pref_max_alarm_duration_value9" translatable="false">3600</string>
    <string name="pref_max_alarm_duration_optionUnlimited">Unlimited</string>
    <string name="pref_max_alarm_duration_valueUnlimited" translatable="false">unlimited</string>

    <string name="pref_alarm_ringtone_key" translatable="false">ringtone</string>
    <string name="pref_alarm_ringtone_label">Ringtone</string>
    <string name="pref_alarm_ringtone_ok">SET RINGTONE</string>
    <string name="pref_alarm_ringtone_cancel">CANCEL</string>

    <string name="pref_auto_snooze_label" translatable="false">@string/alarm_mode_auto_snooze</string>
    <string name="pref_auto_snooze_duration_unit">&#160;seconds</string>
    <string name="pref_auto_snooze_duration_key" translatable="false">auto_snooze_delay</string>
    <string name="pref_auto_snooze_duration_default" translatable="false">4</string>
    <string name="pref_auto_snooze_repetition_unit">&#160;repetitions</string>
    <string name="pref_auto_snooze_repetition_key" translatable="false">auto_snooze_repetition</string>
    <string name="pref_auto_snooze_repetition_default" translatable="false">6</string>

    <string name="pref_volume_key" translatable="false">volume</string>
    <string name="pref_volume_default" translatable="false">0</string>
    <string name="pref_volume_label">Volume</string>
    <string name="pref_volume_system_default">Device volume</string>

    <!-- calculation fragment -->
    <string name="calculation_text" translatable="false">%1$d %2$s %3$d = %4$d</string>
</resources>
