<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:layout_gravity="center"
    android:background="@color/colorTransparentDarkGrey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_pen" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:maxLength="20"
            android:imeOptions="actionDone"
            android:text="" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:orientation="horizontal">

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="614dp"
            android:layout_height="216dp"
            android:headerBackground="@color/colorPrimary"
            android:numbersBackgroundColor="@color/colorLight"
            android:numbersSelectorColor="@color/colorAccent"
            android:timePickerMode="spinner"
            android:transitionName="timeTransition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/pick_date"
            android:layout_width="33dp"
            android:layout_height="28dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/ic_calendar"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/date_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="30. September 2018"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ToggleButton
            android:id="@+id/mondayButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/art_button_day"
            android:textOff="@string/add_time_monday"
            android:textOn="@string/add_time_monday" />
        <ToggleButton
            android:id="@+id/tuesdayButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/art_button_day"
            android:textOff="@string/add_time_tuesday"
            android:textOn="@string/add_time_tuesday" />
        <ToggleButton
            android:id="@+id/wednesdayButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/art_button_day"
            android:textOff="@string/add_time_wednesday"
            android:textOn="@string/add_time_wednesday" />
        <ToggleButton
            android:id="@+id/thursdayButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/art_button_day"
            android:textOff="@string/add_time_thursday"
            android:textOn="@string/add_time_thursday" />
        <ToggleButton
            android:id="@+id/fridayButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/art_button_day"
            android:textOff="@string/add_time_friday"
            android:textOn="@string/add_time_friday" />
        <ToggleButton
            android:id="@+id/saturdayButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/art_button_day"
            android:textOff="@string/add_time_saturday"
            android:textOn="@string/add_time_saturday" />
        <ToggleButton
            android:id="@+id/sundayButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@drawable/art_button_day"
            android:textOff="@string/add_time_sunday"
            android:textOn="@string/add_time_sunday" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/autoSnoozeButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/art_button_mode"
            android:text="ToggleButton"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textOff=""
            android:textOn=""
            android:transitionName="imageViewTransition" />

        <TextView
            android:id="@+id/auto_snooze_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alarm_mode_standard"
            android:gravity="center"/>
    </LinearLayout>

    <Button
        android:id="@+id/submitTimeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        android:text="@string/submit_time" />
</LinearLayout>